# pragma-monorepo

./: .gitignore  .gitmodules  .prettierignore  Cargo.toml  LICENSE.md  README.md  monorepo.code-workspace  package-lock.json
.github/workflows/: cairo-test.yml  linters-cargo.yml  linters.yml  pull-request.yml  push-theoros-image.yml  rust-build.yml  solidity-test.yml
cairo/: Scarb.toml
cairo/crates/pragma_dispatcher/: Scarb.toml
cairo/crates/pragma_feed_registry/: Scarb.toml
cairo/crates/pragma_feed_types/: Scarb.toml
cairo/crates/pragma_feeds_registry/: Scarb.toml
cairo/crates/pragma_maths/: Scarb.toml
cairo/dispatcher/: Scarb.toml
cairo/oracle/: Scarb.toml
cli/: Cargo.toml
cli/src/: lib.rs
cli/src/cli/: list.rs
cli/src/runtimes/: support.rs
cli/src/utils/: conversion.rs  mod.rs
config/: currencies.yaml  feeds.yaml  supported_feeds.yaml
deployments/holesky/: pragma.json
deployments/madara_devnet/: dispatcher.json  oracle.json
deployments/pragmaDevnet/: dispatcher.json  oracle.json
deployments/sepolia/: pragma.json
deployments/zircuitTestnet/: pragma.json
infra/theores/: Dockerfile  config.yml  entrypoint.sh
infra/theoros/: Dockerfile  buildspec.yml  config.yml  entrypoint.sh
rust/: .env.example  Cargo.toml  Dockerfile  checkpoint_9300_with_id.json  evm_config.yaml  rust-toolchain.toml
rust/pragma-cli/: Cargo.toml
rust/pragma-cli/src/: main.rs
rust/pragma-cli/src/cli/: list.rs  mod.rs  schedule.rs  types.rs
rust/pragma-cli/src/runtimes/: README.md  support.rs
rust/pragma-cli/src/runtimes/artifacts/: madara_metadata.scale
rust/pragma-cli/src/utils/: substrate.rs
rust/pragma-feeds/: Cargo.toml
rust/pragma-feeds/src/: lib.rs
rust/pragma-utils/: Cargo.toml
rust/pragma-utils/src/: bytes.rs  http.rs  lib.rs  services.rs
rust/pragma-utils/src/conversions/: alloy.rs  apibara.rs  mod.rs  starknet.rs
rust/pragma-utils/src/feeds/: mod.rs
rust/theoros/: Cargo.toml  Dockerfile  README.md  openapi.json
rust/theoros/scripts/: init_db.sh
rust/theoros/src/: cli.rs  config.rs  constants.rs  lib.rs  main.rs
rust/theoros/src/configs/: evm_config.rs  mod.rs
rust/theoros/src/errors/: app_error.rs  calldata_error.rs  chains_error.rs  data_feeds_error.rs  mod.rs
rust/theoros/src/extractors/: mod.rs
rust/theoros/src/handlers/: build_calldata.rs  get_calldata.rs  get_chains.rs  get_data_feeds.rs  mod.rs
rust/theoros/src/handlers/rest/: get_calldata.rs  get_data_feeds.rs  mod.rs
rust/theoros/src/handlers/websocket/: mod.rs  subscribe_to_calldata.rs
rust/theoros/src/hyperlane/: calls.rs
rust/theoros/src/infra/db/: migrations.rs
rust/theoros/src/rpc/: hyperlane.rs  mod.rs  pragma_dispatcher.rs  pragma_feeds_registry.rs  pragma_wrapper.rs
rust/theoros/src/rpc/evm/: hyperlane.rs  mod.rs
rust/theoros/src/rpc/starknet/: hyperlane.rs  mod.rs  pragma_feeds_registry.rs
rust/theoros/src/servers/: metrics.rs
rust/theoros/src/servers/api/: docs.rs  mod.rs  router.rs
rust/theoros/src/services/: indexer.rs  metrics.rs  mod.rs
rust/theoros/src/services/api/: docs.rs  mod.rs  router.rs
rust/theoros/src/services/hyperlane/: mod.rs
rust/theoros/src/services/indexer/: mod.rs
rust/theoros/src/services/metrics/: mod.rs
rust/theoros/src/storage/: cache.rs  checkpoints.rs  event.rs  feed_id.rs  mod.rs  updates.rs  utils.rs  validator.rs  validators.rs  validators_storage.rs
rust/theoros/src/storages/: event_storage.rs  mod.rs  validators_storage.rs
rust/theoros/src/traits/hyperlane/: mod.rs
rust/theoros/src/types/: calldata.rs  dispatch_event.rs  event_storage.rs  mod.rs  network.rs  rpc.rs  starknet_rpc.rs  state.rs
rust/theoros/src/types/hyperlane/: checkpoint.rs  dispatch_event.rs  mod.rs  signature.rs  signing.rs  storage.rs
rust/theoros/src/types/hyperlane/checkpoint_fetchers/: gcs.rs  local.rs  mod.rs  s3.rs
rust/theoros/src/types/hyperlane/checkpoints/: fetcher.rs  mod.rs  syncer.rs
rust/theoros/src/types/hyperlane/events/: dispatch_event.rs  mod.rs  validator_announcement_event.rs
rust/theoros/src/types/hyperlane/settings/: aws_credentials.rs
rust/theoros/src/types/hyperlane/storages/: gcs_storage.rs  local.rs  mod.rs  s3.rs
rust/theoros/src/types/pragma/: calldata.rs  constants.rs  mod.rs
rust/utils/: Cargo.toml
rust/utils/src/: db.rs  lib.rs  tracing.rs
rust/utils/src/conversions/: apibara.rs  mod.rs
solidity/: .gitignore  README.md  foundry.toml  hardhat.config.js  hardhat.config.ts  package-lock.json  package.json  previous_gas_report.txt  remappings.txt  slither.config.json  tsconfig.json
solidity/contracts/interfaces/: IPragma.sol
solidity/contracts/libraries/: DataParser.sol  MerkleTree.sol  UnsafeCalldataBytesLib.sol
solidity/scripts/: config.ts  deploy.ts  generate.js  index.js
solidity/src/: DataParser.sol  Hyperlane.sol  HyperlaneRecipient.sol  Pragma.sol  PragmaDecoder.sol
solidity/src/interfaces/: IDataParser.sol  IHyperlane.sol  IPragma.sol  PragmaStructs.sol  structs.sol
solidity/src/libraries/: BytesLib.sol  ConstantsLib.sol  DataParser.sol  ErrorsLib.sol  EventsLib.sol  MerkleTree.sol  UnsafeBytesLib.sol  (+1 more)
solidity/test/: DataParser.t.sol  Pragma.t.sol  PragmaDecoder.t.sol  TestUtils.sol
src/: main.rs
src/cli/: list.rs  mod.rs  schedule.rs  types.rs
src/utils/: constants.rs  conversion.rs  mod.rs  substrate.rs
typescript/: .env.example  README.md  bun.lockb  hardhat.config.ts  package-lock.json  package.json
typescript/config/: config.example.yaml  config.yaml
typescript/deployments/: dispatcher.json
typescript/pragma-deployer/: .env.example  .gitignore  README.md  bun.lockb  hardhat.config.ts  package-lock.json  package.json
typescript/pragma-scripts/: .env.example  README.md  bun.lockb  package-lock.json  package.json
typescript/pragma-utils/: README.md  bun.lockb  package-lock.json  package.json
typescript/scripts/: README.md  bun.lockb  package.json  tsconfig.json
typescript/src/: chains.ts  config.ts  constants.ts  index.ts  manager.ts
typescript/theoros-sdk/: README.md  bun.lockb  package-lock.json  package.json  tsconfig.json
(+208 files in other folders)
