[package]
name = "pragma-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pragma"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { worspace = true }
async-trait = { workspace = true }
bollard = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
ethers = { workspace = true }
eyre = { workspace = true }
futures-util = { workspace = true }
git2 = { workspace = true }
hex = { workspace = true }
inquire = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sp-core = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
subxt = { workspace = true }
subxt-signer = { workspace = true }
scale-info = { workspace = true }
scale = { workspace = true }
url = { workspace = true }
starknet-ff = { workspace = true }
starknet-core = { workspace = true }
