[workspace]
resolver = "2"
members = ["pragma-cli", "theoros"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Pragma Labs <support@pragma.build>"]
repository = "https://github.com/astraly-labs/pragma-monorepo/"
documentation = "https://docs.pragma.build/"
homepage = "https://pragma.build/"
license-file = "../LICENSE.md"
publish = false

[workspace.dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
bollard = "0.17.1"
clap = { version = "4.5.16", features = ["derive"] }
dirs = "5.0.1"
dotenvy = "0.15.7"
envy = "0.4.2"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel_migrations = "2.2.0"
diesel = { version = "2.2.3", features = [
  "postgres",
  "extras",
  "postgres_backend",
  "serde_json",
] }
env_logger = "0.11.5"
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "f0e5b194f09c533feb10d1a686ddb9e5946ec107" }
eyre = "0.6.12"
futures-util = "0.3.30"
git2 = "0.19.0"
hex = "0.4.3"
inquire = "0.7.5"
tracing = "0.1.4"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-axiom = "0.7"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sp-core = "34.0.0"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = { version = "0.26.4", features = [] }
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["rt", "rt-multi-thread", "macros"] }
toml = "0.8.19"
subxt = "0.37.0"
subxt-signer = "0.37.0"
scale-info = "2.11.3"
scale = { package = "parity-scale-codec", version = "3.0.0", features = [
  "derive",
] }
url = { version = "2.5.2", features = ["serde"] }
starknet-ff = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "64ebc36", default-features = false, features = [
  "std",
] }
starknet-core = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "64ebc36", default-features = false, features = [
  "std",
] }

# Tests dependencies
tracing-test = "0.2.5"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
