[package]
name = "pragma-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pragma"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
bollard = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
# TODO: alloy
alloy = { workspace = true }
eyre = { workspace = true }
futures-util = { workspace = true }
git2 = { workspace = true }
hex = { workspace = true }
inquire = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
scale = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starknet = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

pragma-utils = { path = "../pragma-utils" }
