[package]
name = "pragma-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
apibara-core = { workspace = true }
async-trait = { workspace = true }
starknet = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
tracing-axiom = { workspace = true }
tracing-subscriber = { workspace = true }
rusoto_core = { workspace = true }
hex = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
