[package]
name = "pragma-utils"
version = "1.0.0"
edition = "2021"

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
apibara-core = { workspace = true }
async-trait = { workspace = true }
rusoto_core = { workspace = true }
starknet = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
tracing-axiom = { workspace = true }
tracing-subscriber = { workspace = true }
