[package]
name = "theoros"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
apibara-core = { workspace = true }
apibara-sdk = { workspace = true }
axum = { workspace = true, features = ["macros", "ws", "tokio"] }
axum-macros = { workspace = true }
bigdecimal = { workspace = true }
deadpool-diesel = { workspace = true, features = ["postgres"] }
diesel = { workspace = true, features = [
  "postgres",
  "extras",
  "postgres_backend",
  "serde_json",
] }
diesel_migrations = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
futures-util = { workspace = true }
opentelemetry = { workspace = true }
serde = { workspace = true, features = ["derive"] }
starknet = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
tower-http = { workspace = true, features = ["fs", "trace", "cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
utoipauto = { workspace = true }
url = { workspace = true }

utils = { path = "../utils" }
