[package]
name = "theoros"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
apibara-core = { workspace = true }
apibara-sdk = { workspace = true }
axum = { workspace = true, features = ["macros", "ws", "tokio"] }
axum-macros = { workspace = true }
bigdecimal = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dotenvy = { workspace = true }
envy = { workspace = true }
futures-util = { workspace = true }
hyper = { workspace = true, features = ["server"] }
opentelemetry = { workspace = true }
prometheus = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
starknet = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
tower-http = { workspace = true, features = ["fs", "trace", "cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
utoipauto = { workspace = true }
parking_lot = { workspace = true }
strum = { workspace = true, features = ["derive"] }

utils = { path = "../utils" }
