[package]
name = "theoros"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
apibara-core = { workspace = true }
apibara-sdk = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["macros", "ws", "tokio"] }
axum-macros = { workspace = true }
bigdecimal = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "env"] }
dotenvy = { workspace = true }
envy = { workspace = true }
futures-util = { workspace = true }
hyper = { workspace = true, features = ["server"] }
lazy_static = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
opentelemetry = { workspace = true }
prometheus = { workspace = true }
rusoto_core = { workspace = true }
rusoto_s3 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
starknet = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
tower-http = { workspace = true, features = ["fs", "trace", "cors"] }
tracing = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
utoipauto = { workspace = true }
ya-gcp = { workspace = true }
pragma-feeds = { workspace = true }
pragma-utils = { workspace = true }
