[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
apibara-core = { workspace = true }
apibara-sdk = { workspace = true }
deadpool-diesel = { workspace = true, features = ["postgres"] }
starknet = { workspace = true }
tracing = { workspace = true }
tracing-axiom = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
futures = { workspace = true }
